@@ -33,7 +33,7 @@
     <UserPref name="isConfigured" datatype="hidden" default_value="false"/>
     <UserPref name="refresh" datatype="hidden" default_value="false"/>
 
-    <UserPref name="Project" datatype="hidden" required="true"/>
+    <UserPref name="Project" required="true"/>
     <UserPref name="Issues" datatype="select" required="true"/>
     <UserPref name="Period" datatype="hidden" required="true"/>
     <UserPref name="Version" datatype="hidden"/>
