@@ -44,3 +44,4 @@
 - PIP-118 Poprawki podliczania elementów chartu + refactoring
 - Naprawa konfliktów z merge jarek -> development
 - PIP-150 Dodano listener zmieniający rozmiar gadżetu przy wyborze statusu
+- PIP-131 Stworzono pole ProjectOrFilter
